[package]
name = "RDNAT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdnat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
base64 = "0.13.0"
env_logger = "0.11.5"
log = "0.4.22"